相关功能添加到配置文件

--- a/.github/.instructions.md
+++ b/.github/.instructions.md
@@ -379,4 +379,72 @@ volumes:
 - [ ] 加密敏感字段
 - [ ] 审计日志
 
+## 🚀 新功能开发指南
+
+### 价格监控系统开发
+```typescript
+// 前端组件结构
+components/
+├── PriceBoard/
+│   ├── TokenWatchList.tsx          # 关注代币列表
+│   ├── PriceChart.tsx             # 价格图表
+│   ├── ExchangeSelector.tsx       # 交易所选择器
+│   └── AlertManager.tsx           # 提醒管理
+```
+
+```rust
+// 后端模块结构
+src/
+├── services/
+│   ├── price_monitor.rs           # 价格监控服务
+│   ├── alert_engine.rs            # 提醒引擎
+│   └── exchange_connector.rs      # 交易所连接器
+```
+
+### 交易策略系统开发
+```typescript
+// 策略编辑器组件
+components/
+├── StrategyBuilder/
+│   ├── ConditionBuilder.tsx       # 条件构建器
+│   ├── IndicatorSelector.tsx      # 指标选择器
+│   ├── StrategyTester.tsx         # 策略回测
+│   └── TemplateLibrary.tsx        # 策略模板库
+```
+
+### 智能交易机器人开发
+```rust
+// 交易机器人核心模块
+src/
+├── bot/
+│   ├── copy_trader.rs             # 复制交易
+│   ├── wallet_tracker.rs          # 钱包追踪
+│   ├── signal_processor.rs        # 信号处理
+│   └── execution_engine.rs        # 执行引擎
+```
+
+### 开发规范补充
+
+#### WebSocket 连接管理
+```typescript
+// 实时数据连接标准
+interface WebSocketManager {
+  connect(exchange: string): Promise<WebSocket>;
+  subscribe(symbol: string, callback: (data: PriceData) => void): void;
+  unsubscribe(symbol: string): void;
+  reconnect(): void;
+}
+```
+
+#### 交易所 API 集成标准
+```rust
+// 统一交易所接口
+pub trait ExchangeAPI {
+    async fn get_price(&self, symbol: &str) -> Result<Price>;
+    async fn place_order(&self, order: Order) -> Result<OrderResult>;
+    async fn get_balance(&self) -> Result<Balance>;
+    async fn get_order_history(&self) -> Result<Vec<Order>>;
+}
+```
+
 这个开发指南为团队提供了完整的开发框架和最佳实践，确保项目的高质量交付。
